--- a/html/index.html
+++ b/html/index.html
@@ -101,6 +101,83 @@
                     </button>
                 </div>
              </div>
+
+             <!-- Carbon Fibre kit -->
+              <div class="border p-4 mb-8 rounded-lg shadow">
+                <h3 class="font-semibold mb-2">M Carbon Exterior Package</h3>
+                <label class="flex items-center space-x-2 mb-2">
+                    <input type="checkbox" id="carbon-mirror-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
+                    <span>Add M Carbon Mirror Caps</span>
+                    <span class="font-semibold">($1300)</span>
+                </label>
+                <label class="flex items-center space-x-2 mb-2">
+                    <input type="checkbox" id="carbon-spoiler-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
+                    <span>Add M Carbon Rear Spoiler</span>
+                    <span class="font-semibold">($1300)</span>
+                </label>
+                <label class="flex items-center space-x-2">
+                    <input type="checkbox" id="carbon-roof-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
+                    <span>Add M Carbon Roof</span>
+                    <span class="font-semibold">($1300)</span>
+                </label>
+              </div>
+
+              <!-- Performance -->
+               <div class="mb-8">
+                <h3 class="font-semibold mb-2">Performance</h3>
+                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black">Performance Upgrade (+$8000)</button>
+               </div>
+
+               <!-- Driving Assistance -->
+               <div class="mb-8">
+                <h3 class="font-semibold mb-2">Driving Assistance</h3>
+                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black">Advanced Driver Assistance Package (+$2000)</button>
+               </div>
+
+               <!-- Extras -->
+              <div class="border p-4 mb-8 rounded-lg shadow">
+                <h3 class="font-semibold mb-2">Add more extras</h3>
+                <label class="flex items-center space-x-2 mb-2">
+                    <input type="checkbox" id="sunshades-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
+                    <span>Add Side Sunshades</span>
+                    <span class="font-semibold">($1000)</span>
+                </label>
+                <label class="flex items-center space-x-2 mb-2">
+                    <input type="checkbox" id="red-compound-brakes-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
+                    <span>Add M Compound Brakes, Red</span>
+                    <span class="font-semibold">($750)</span>
+                </label>
+                <label class="flex items-center space-x-2">
+                    <input type="checkbox" id="m-drivers-package-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
+                    <span>Add M Driver's Package</span>
+                    <span class="font-semibold">($2500)</span>
+                </label>
+              </div>
+
+               <!-- Total Price -->
+                <div class="pt-4">
+                    <h3 class="font-semibold text-lg">Total Price</h3>
+                    <p id="total-price" class="text-2xl font-bold">$148,214</p>
+                </div>
+
+               <!-- Cost Breakdown -->
+                <div class="border-t pt-4 mt-6">
+                    <h3 class="font-semibold text-lg">Estimated Cost Breakdown</h3>
+                    <div class="mt-4">
+                        <p>Down Payment
+                            <span id="down-payment" class="font-bold">$7500</span>
+                        </p>
+                        <p>Loan Term:
+                            <span class="font-bold">60 Months</span>
+                        </p>
+                        <p>Interest Rate:
+                            <span class="font-bold">4% APR</span>
+                        </p>
+                        <p>Estimated Monthly Payment:
+                            <span id="monthly-payment" class="font-bold">$849.72</span>
+                        </p>
+                    </div>
+                </div>
         </aside>
 
      </main>
