--- a/html/index.html
+++ b/html/index.html
@@ -92,11 +92,11 @@
                 <h3 class="text-lg text-left font-semibold mb-5">Wheel</h3>
                 <div class="flex space-x-4">
                     <button class="transition transform duration-300 hover:scale-110 btn-selected tooltip">
-                        <img src="/images/wheel_951.png" alt="black-int" class="w-15 rounded-full">
+                        <img src="/images/wheel_951.png" alt="951" class="w-15 rounded-full">
                         <p class="tooltiptext">(+$0)</p>
                     </button>
                     <button class="transition transform duration-300 hover:scale-110 tooltip">
-                        <img src="/images/wheel_952.png" alt="red-int" class="w-15 rounded-full">
+                        <img src="/images/wheel_952.png" alt="952" class="w-15 rounded-full">
                         <p class="tooltiptext">(+$750)</p>
                     </button>
                 </div>
