--- a/html/index.html
+++ b/html/index.html
@@ -157,7 +157,7 @@
                <!-- Total Price -->
                 <div class="pt-4">
                     <h3 class="font-semibold text-lg">Total Price</h3>
-                    <p id="total-price" class="text-2xl font-bold">$148,214</p>
+                    <p id="total-price" class="text-2xl font-bold"></p>
                 </div>
 
                <!-- Cost Breakdown -->
