changed carbon heading and added price calculation for carbon options

--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,7 @@
 
              <!-- Carbon Fibre kit -->
               <div class="border p-4 mb-8 rounded-lg shadow">
-                <h3 class="font-semibold mb-2">M Carbon Exterior Package</h3>
+                <h3 class="font-semibold mb-2">M Carbon Exterior Options</h3>
                 <label class="flex items-center space-x-2 mb-2">
                     <input type="checkbox" id="carbon-mirror-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
                     <span>Add M Carbon Mirror Caps</span>
