--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
      <main class="flex flex-col md:flex-row justify-between px-3 md:px-10 py-6">
         <!-- Display -->
         <section class="w-full md:w-3/4">
-            <div class="sticky top-24">
+            <div class="sticky top-20">
                 <!-- Exterior -->
                  <div class="bg-gray-100 h-100 flex justify-center items-center mb-4 overflow-hidden">
                     <img src="/images/white_951.png" alt="White car" class="max-w-full h-auto transform scale-75" id="exterior-image">
@@ -125,13 +125,13 @@
               <!-- Performance -->
                <div class="mb-8">
                 <h3 class="font-semibold mb-2">Performance</h3>
-                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black">Performance Upgrade (+$8000)</button>
+                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black" id="performance-package">Performance Upgrade (+$8000)</button>
                </div>
 
                <!-- Driving Assistance -->
                <div class="mb-8">
                 <h3 class="font-semibold mb-2">Driving Assistance</h3>
-                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black">Advanced Driver Assistance Package (+$2000)</button>
+                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black" id="advanced-driver-package">Advanced Driver Assistance Package (+$2000)</button>
                </div>
 
                <!-- Extras -->
