--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
                     </button>
                     <button class="transition transform duration-300 hover:scale-110 tooltip">
                         <img src="/images/int_red.webp" alt="red-int" class="w-15 rounded-full">
-                        <p class="tooltiptext">(+$1150)</p>
+                        <p class="tooltiptext">(+$1,150)</p>
                     </button>
                 </div>
              </div>
@@ -108,30 +108,30 @@
                 <label class="flex items-center space-x-2 mb-2">
                     <input type="checkbox" id="carbon-mirror-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
                     <span>Add M Carbon Mirror Caps</span>
-                    <span class="font-semibold">($1300)</span>
+                    <span class="font-semibold">($1,300)</span>
                 </label>
                 <label class="flex items-center space-x-2 mb-2">
                     <input type="checkbox" id="carbon-spoiler-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
                     <span>Add M Carbon Rear Spoiler</span>
-                    <span class="font-semibold">($1300)</span>
+                    <span class="font-semibold">($1,300)</span>
                 </label>
                 <label class="flex items-center space-x-2">
                     <input type="checkbox" id="carbon-roof-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
                     <span>Add M Carbon Roof</span>
-                    <span class="font-semibold">($1300)</span>
+                    <span class="font-semibold">($1,300)</span>
                 </label>
               </div>
 
               <!-- Performance -->
                <div class="mb-8">
                 <h3 class="font-semibold mb-2">Performance</h3>
-                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black" id="performance-package">Performance Upgrade (+$8000)</button>
+                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black" id="performance-package">Performance Upgrade (+$8,000)</button>
                </div>
 
                <!-- Driving Assistance -->
                <div class="mb-8">
                 <h3 class="font-semibold mb-2">Driving Assistance</h3>
-                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black" id="advanced-driver-package">Advanced Driver Assistance Package (+$2000)</button>
+                <button class="bg-gray-800 py-4 w-full hover:bg-gray-300 rounded-lg text-white hover:text-black" id="advanced-driver-package">Advanced Driver Assistance Package (+$2,000)</button>
                </div>
 
                <!-- Extras -->
@@ -140,7 +140,7 @@
                 <label class="flex items-center space-x-2 mb-2">
                     <input type="checkbox" id="sunshades-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
                     <span>Add Side Sunshades</span>
-                    <span class="font-semibold">($1000)</span>
+                    <span class="font-semibold">($1,000)</span>
                 </label>
                 <label class="flex items-center space-x-2 mb-2">
                     <input type="checkbox" id="red-compound-brakes-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
@@ -150,7 +150,7 @@
                 <label class="flex items-center space-x-2">
                     <input type="checkbox" id="m-drivers-package-checkbox" class="form-checkbox h-5 w-5 text-blue-600">
                     <span>Add M Driver's Package</span>
-                    <span class="font-semibold">($2500)</span>
+                    <span class="font-semibold">($2,500)</span>
                 </label>
               </div>
 
@@ -165,7 +165,7 @@
                     <h3 class="font-semibold text-lg">Estimated Cost Breakdown</h3>
                     <div class="mt-4">
                         <p>Down Payment
-                            <span id="down-payment" class="font-bold">$7500</span>
+                            <span id="down-payment" class="font-bold">$7,500</span>
                         </p>
                         <p>Loan Term:
                             <span class="font-bold">60 Months</span>
@@ -174,7 +174,7 @@
                             <span class="font-bold">4% APR</span>
                         </p>
                         <p>Estimated Monthly Payment:
-                            <span id="monthly-payment" class="font-bold">$849.72</span>
+                            <span id="monthly-payment" class="font-bold"></span>
                         </p>
                     </div>
                 </div>
